# zap_agil

./: dev-requirements.txt  pyproject.toml  readme-ptbr.md  readme.md  requirements.txt  run_tests.bat
tests/: test_core___init__.py  test_core_app_events.py  test_core_audio_manager.py  test_core_bot_service.py  test_core_campaign_manager.py  test_core_constants.py  test_core_report_manager.py  test_core_schedule_manager.py  test_core_template_manager.py  test_core_web_driver_manager.py  test_core_whatsapp_manager.py  test_ui___init__.py  test_ui_dialogs.py  test_ui_disclaimer_ui.py  test_ui_main_frame.py  test_ui_panels.py  test_ui_settings_dialog.py  test_ui_ui_utils.py  test_utils___init__.py  test_utils_config_manager.py  test_utils_json_utils.py  test_utils_logging_config.py  test_utils_system_utils.py
zap_agil/: dicas.txt  novidades.txt  zap_agil.pyw
zap_agil/core/: app_events.py  audio_manager.py  bot_locators.py  bot_service.py  campaign_manager.py  constants.py  report_manager.py  schedule_manager.py  template_manager.py  web_driver_manager.py  whatsapp_manager.py
zap_agil/ui/: dialogs.py  disclaimer_ui.py  main_frame.py  panels.py  settings_dialog.py  ui_utils.py
zap_agil/utils/: config_manager.py  json_utils.py  logging_config.py  system_utils.py
